<resources>
    <string name="app_name">Lyfecycle_HomeWork</string>
    <string name="weight">Масса:</string>
    <string name="enter_weight">Введите массу</string>
    <string name="enter_height">Введите рост</string>
    <string name="height">Рост:</string>
    <string name="calculate">Рассчитать</string>
    <string name="title">Индекс массы тела</string>
    <string name="image_bmi">image_bmi</string>
    <string name="bmi">ИМТ:\ </string>
    <string name="slim"> Низкий вес (ИМТ &lt; 18,5)\n
        Рекомендации: \n
        Людям с низким весом важно обратить внимание на сбалансированное питание с увеличением
        калорийности рациона, чтобы поддерживать здоровье и наращивать массу тела.
        Для этого стоит включить в рацион больше продуктов, богатых белками, здоровыми жирами и
        углеводами. Белки можно получать из мяса, рыбы, яиц, орехов и бобовых, что помогает
        укрепить мышцы и поддерживать иммунитет. Здоровые жиры, такие как оливковое масло, авокадо
        и орехи, также должны стать частью повседневного питания, так как они способствуют
        нормализации обмена веществ и улучшению состояния кожи и волос. Необходимо избегать
        чрезмерного употребления сладких и жирных продуктов с низкой питательной ценностью,
        так как они могут привести к другим проблемам со здоровьем, не способствуя набору массы.
        Углеводы, такие как цельнозерновой хлеб, овсянка и картофель, обеспечат организм длительной
        энергией и помогут набрать вес здоровым образом. Помимо питания, регулярные физические
        упражнения, особенно силовые тренировки, помогут нарастить мышечную массу и улучшить общее
        состояние организма. Важно помнить, что перед началом набора веса рекомендуется
        проконсультироваться с врачом или диетологом, чтобы исключить возможные заболевания,
        влияющие на недостаточный вес, такие как проблемы с обменом веществ или гормональный дисбаланс.
    </string>
    <string name="normal">Нормальный вес (ИМТ 18,5 - 24,9):\n
        Рекомендации: \n
        Поддерживать текущий вес с помощью здорового образа жизни.
        Включайте в рацион питательные продукты, уделяйте внимание физической активности
        (не менее 150 минут умеренной активности в неделю). Регулярно проходите медицинские
        осмотры для контроля состояния здоровья.
    </string>
    <string name="fat">Избыточный вес (ИМТ 25,0 - 29,9):\n
        Рекомендации:\n
        Рекомендуется сократить калорийность рациона, уменьшив количество потребляемых
        высококалорийных и малополезных продуктов. Это могут быть продукты с высоким содержанием
        сахара, насыщенных жиров и переработанных углеводов. Важно уделить внимание качеству пищи,
        включая в рацион больше свежих овощей, фруктов, нежирных белков и цельнозерновых продуктов.
        Эти изменения помогут улучшить общее состояние здоровья и снизить риск развития хронических
        заболеваний. Для поддержания здорового веса рекомендуется увеличить физическую активность.
        Согласно рекомендациям, следует заниматься умеренной физической нагрузкой не менее 150–300
        минут в неделю. Это могут быть прогулки на свежем воздухе, плавание, езда на велосипеде или
        лёгкие занятия в зале. Физическая активность помогает не только снизить вес, но и укрепить
        сердечно-сосудистую систему, улучшить обмен веществ и повысить общее самочувствие.
        Необходимо регулярно консультироваться с врачом для оценки рисков, связанных с избыточным
        весом. Врач может помочь определить индивидуальный план питания и физической активности,
        чтобы достичь оптимальных результатов без вреда для здоровья.
    </string>
    <string name="very_fat">Ожирение (ИМТ 30,0 - 34,9):\n
        Рекомендации:\n
        Для людей с ожирением важно работать над снижением веса под контролем специалиста.
        Важно уменьшить калорийность, исключить вредные продукты, увеличить физическую активность и
        рассмотреть медицинские способы поддержки (диетолог, эндокринолог). Также важно обратить
        внимание на регулярные обследования для предотвращения развития хронических заболеваний,
        таких как диабет и сердечно-сосудистые заболевания.
    </string>
</resources>